Revert "Alguien olvidó el utf-8"
This reverts commit af2e928ca1aa5d1ff90d8d727b2c15a3eea38a45.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Estudio Fotográfica</title>
+	<title>Estudio Fotográfico</title>
 </head>
 <body>
 	
