Foto añadida y issue cerrado
Foto añadida y issue cerrado
closes #1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<h1>Bienvenido a la web del estudio fotográfico</h1>
 	<p>Esta es la web donde podrás ver nuestros trabajos</p>
 
+	<div class="foto"></div>
+
 
 </body>
 </html>
